# dev-env-conf-tools

./: .env  Cargo.toml  README.md
config-files/: .zshrc
src/: action_manager.rs  config.rs  main.rs
src/actions/: action.rs  install_oh_my_zsh_action.rs  install_powerlvl10k_action.rs  mod.rs  zsh_config_action.rs
src/cli/: mod.rs
src/errors/: action_error.rs  mod.rs  temp_file_error.rs
src/helpers/: file_helper.rs  mod.rs  oh_my_zsh_helper.rs  zsh_helper.rs
src/util/: mod.rs  temp_files.rs
